--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ commands:
             then
             #  cd ~/project/backend
             #  npm install
-            #  Add revert code here. You can find this in the Getting Started section.
+            #  Add revert code here. You can find this in the Getting Starte section.
               exit 1
             fi
             
