--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
             cd frontend
             npm install
             npm run build
+            npm audit fix
             exit 1
       - save_cache:
           paths: [frontend/node_modules]
@@ -31,6 +32,7 @@ jobs:
             cd frontend
             npm install
             npm run build
+            npm audit fix
             exit 1
       - save_cache:
           paths: [backend/node_modules]
