--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             cd frontend
             npm install
             npm run build
-            npm audit fix
+            npm audit fix --force
             npm fund
             exit 1
       - save_cache:
@@ -32,6 +32,8 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm audit fix --force
+            npm fund
             npm run build
             exit 1
       - save_cache:
