--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,36 +13,15 @@ jobs:
             cd frontend
             npm install
             npm run build
-            npm audit fix --force
+            npm audit fix 
             npm fund
             exit 1
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
 
-  build-backend:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-build]
-      - run:
-          name: Back-end build
-          command: |
-            cd frontend
-            npm install
-            npm audit fix --force
-            npm fund
-            npm run build
-            exit 1
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build
-
 workflows:
   default:
     jobs:
       - build-frontend
-      - build-backend
      
