--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
             cd frontend
             npm install
             npm run build
+            npm fund
+            npm audit fix
             exit 1
       - save_cache:
           paths: [frontend/node_modules]
