--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,7 @@ jobs:
             cd frontend
             npm install
             npm run build
-            npm fund
-            npm audit fix
+          
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -23,11 +22,12 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Back-end build
           command: |
-            cd frontend
+            cd backend
             npm install
             npm run build
            
