--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ jobs:
             cd frontend
             npm install
             npm audit --audit-level=critical
+            npm audit fix --audit-level=critical
           
                 
 
@@ -92,7 +93,8 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit --audit-level=critical      
+            npm audit --audit-level=critical  
+            npm audit fix --audit-level=critical    
            
 workflows:
   default:
