--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,8 +76,8 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-            npm audit fix --audit-level=critical
           
                 
 
@@ -93,8 +93,8 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit --audit-level=critical  
-            npm audit fix --audit-level=critical    
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical   
            
 workflows:
   default:
