scan-front-and-back

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,34 @@
 version: 2.1
+version: '2.1'
+orbs:
+  slack: circleci/slack@4.1
+workflows:
+  send-notification:
+    jobs:
+      - notify:
+          context: slack-secrets
 jobs:
+  notify:
+    docker:
+      - image: 'cimg/base:stable'
+    steps:
+      - slack/notify:
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "plain_text",
+                      "text": "*This is a text notification*",
+                      "emoji": true
+                    }
+                  ]
+                }
+              ]
+            }
+          event: always
   build-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -109,3 +138,7 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]  
+      - send-notification:
+          jobs:
+            - notify:
+                context: slack-secrets    
