--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,8 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit --audit-level=critical  
+            npm audit --audit-level=critical
+            npm audit fix --audit-level=critical  
            
 workflows:
   default:
