--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,8 +116,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit --audit-level=critical
-            npm audit fix --audit-level=critical  
+            npm audit fix --audit-level=critical --force
            
 workflows:
   default:
