--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,27 @@
 version: 2.1
 orbs:
   slack: circleci/slack@4.1
+
+commands:
+  destroy-frontend:
+    description: Destroy front-end cloudformation stacks given a workflow ID.  
+    steps:
+      - run:
+          name: Destroy environments
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+         
+
+  destroy-backend:
+    description: Destroy back-end cloudformation stacks given a workflow ID.  
+    steps:
+      - run:
+          name: Destroy environments
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+            
 jobs:
   notify:
     docker:
@@ -117,7 +138,46 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
-           
+
+  deploy-infrastructure:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Ensure back-end infrastructure exists
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/backend.yml \
+              #--tags project=backend \
+              # --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              # --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+      - destroy_backend       
+      - run:
+          name: Ensure front-end infrastructure exist
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/frontend.yml \
+              #--tags project=frontend \
+              # --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              # --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+      - destroy_frontend       
+      - run:
+          name: Add back-end ip to ansible inventory
+          command: |
+            aws ec2 describe-instances \
+              \
+                --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --filters "Name=tag:Project,Values=udacity" \
+                --output text >> inventory.txt
+      
+          
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/.circleci/ansible/inventory.txt
+      # Here's where you will add some code to rollback on failure      
+         
 workflows:
   default:
     jobs:
@@ -133,3 +193,8 @@ workflows:
           requires: [build-frontend]  
       - notify:
           context: finalcicd 
+      - deploy-infrastructure:
+        requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+        filters:
+          branches:
+            only: [test-feature-branch]
