--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,7 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --tags project=backend \
               --stack-name  udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}  \
-              --parameter-overrides ID= ${CIRCLE_WORKFLOW_ID:0:7} 
+              --parameter-overrides ID= "${CIRCLE_WORKFLOW_ID:0:7}"
       - destroy_backend       
       - run:
           name: Ensure front-end infrastructure exist
@@ -160,7 +160,7 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --tags project=frontend \
               --stack-name  udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --parameter-overrides ID= ${CIRCLE_WORKFLOW_ID:0:7}  
+              --parameter-overrides ID= "${CIRCLE_WORKFLOW_ID:0:7}"  
       - destroy_frontend       
       - run:
           name: Add back-end ip to ansible inventory
