--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,15 +170,35 @@ jobs:
               \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
                 --filters "Name=tag:Project,Values=udacity" \
-                --output text >> inventory.txt
+                --output text >> .circleci/ansible/inventory.txt
       
           
       - persist_to_workspace:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failure      
+      # Here's where you will add some code to rollback on failure   
+
+  configure-infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11e
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["9a:53:53:e9:ae:19:e2:7d:60:26:99:4b:4a:ee:5b:ba"]
+      # attach workspace
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible 
          
+      - run:
+          name: Configure server
+          command: |
+            ansible-playbook -i .circleci/ansible/inventory.txt  configure-server.yml
+            
+      # Here's where you will add some code to rollback on failure      
+       
 workflows:
   default:
     jobs:
@@ -199,3 +219,5 @@ workflows:
           filters:
             branches:
               only: [finalcicd]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]         
