--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.11e
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
@@ -195,7 +195,8 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i .circleci/ansible/inventory.txt  configure-server.yml
+            cd .circleci/ansible
+            ansible-playbook -i inventory.txt  configure-server.yml
             
       # Here's where you will add some code to rollback on failure      
        
