--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,7 +169,7 @@ jobs:
             aws ec2 describe-instances \
               \
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
-                --filters "Name=tag:Project,Values=udacity" \
+                --filters "Name=tag:Project,Values=backend" \
                 --output text >> .circleci/ansible/inventory.txt
       
           
