--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: "configuration play." 
-  hosts: web
+  hosts: all
   user: ubuntu
   become: true
   become_method: sudo
@@ -18,7 +18,7 @@
 
     - name: "install python for Ansible."
       apt:
-        name: python-pip
+        name: python3-pip
         state: present
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
