--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,7 +217,46 @@ jobs:
                 # If you are using kvdb.io, generate the bucket ID "9GE4jRtKznmVKRfvdBABBe" in your local terminal first
                 curl https://kvdb.io/SbTo2xguyH4cBNU1xs4fYD/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
-     # Here's where you will add some code to rollback on failure      
+     # Here's where you will add some code to rollback on failure  
+
+
+  deploy-frontend:
+    docker:
+      docker:
+      - image: amazon/aws-cli
+    steps:
+      -checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum install -y tar gzip
+            
+
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query "Reservations[*].Instances[*].PublicIpAddress" \
+            --output=text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+
+      - restore_cache:
+          keys: [backend-build]      
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm install
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+
+      # Here's where you will add some code to rollback on failure      
+               
+
 
 workflows:
   default:
@@ -243,3 +282,5 @@ workflows:
           requires: [deploy-infrastructure] 
       - run-migrations:
           requires: [configure-infrastructure]            
+      - deploy-frontend:
+          requires: [run-migrations]    
