--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -18,7 +18,7 @@
 
     - name: "install python for Ansible."
       apt:
-        name: name: ["python"]
+        name: ["python"]
         state: present
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
