--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,8 @@ commands:
     steps:
       - run:
           name: Revert migrations
-          when: on_fail
+          when: on_success
           command: |
-            # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = 1
             if(( $SUCCESS==1 )); 
             then
             #  cd ~/project/backend
@@ -233,7 +231,7 @@ jobs:
             npm install
             npm run migrations > migrations_dump.txt
       - run:
-          name: Send migration results to memstash
+          name: Send migration results to kvdb
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
@@ -254,6 +252,7 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y tar gzip
+            apk add --update nodejs npm
 
 
       - run:
@@ -269,10 +268,10 @@ jobs:
 
       - restore_cache:
           keys: [backend-build] 
-      - run: yum install -y tar gzip         
       - run:
           name: Deploy frontend objects
           command: |
+            yum install -y tar
             cd frontend
             npm install
             npm run build
@@ -280,7 +279,6 @@ jobs:
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
 
       - destroy_frontend
-      - revert-migrations
       
 
       # Here's where you will add some code to rollback on failure      
@@ -289,9 +287,6 @@ jobs:
     docker:
       - image: python:3.7-alpine3.11
     steps:
-      # Checkout code from git
-      # Add ssh keys with fingerprint
-      # attach workspace
       - checkout
       - add_ssh_keys:
           fingerprints: ["9a:53:53:e9:ae:19:e2:7d:60:26:99:4b:4a:ee:5b:ba"]
@@ -301,6 +296,8 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update ansible
+            apk add --update nodejs npm
+
       - run:
           name: Deploy backend
           command: |
@@ -315,7 +312,7 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
 
-      - destroy_frontend
+      - destroy_backend
       - revert-migrations
 
       # Here's where you will add some code to rollback on failure  
