--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ commands:
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
-      # Add parameter here     
+      resave=migration_${CIRCLE_WORKFLOW_ID:0:7}    
     steps:
       - run:
           name: Revert migrations
@@ -33,10 +33,11 @@ commands:
           command: |
             if(( $SUCCESS==1 )); 
             then
-            #  cd ~/project/backend
-            #  npm install
+              cd ~/project/backend
+              npm install
             #  Add revert code here. You can find this in the Getting Starte section.
-              exit 1
+              curl migrations_dump.txt  -d resave
+
             fi  
 
 jobs:
@@ -271,13 +272,13 @@ jobs:
       - run:
           name: Deploy frontend objects
           command: |
-            yum install -y tar
             cd frontend
+            yum install -y tar
             npm install
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-
+      - revert-migrations
       - destroy_frontend
       
 
@@ -311,9 +312,9 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-
-      - destroy_backend
       - revert-migrations
+      - destroy_backend
+      
 
       # Here's where you will add some code to rollback on failure  
 
