--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -28,3 +28,16 @@
     production: yes
     state: present
 
+- name: Creates directory
+  file:
+    path: ~/web
+    state: directory
+
+- name: Copy index test page
+  template:
+    src: "files/artifact.tar.gz"
+    dest: "~/web/artifact.tar.gz"
+
+- name: Executing node
+  shell: |
+    pm2 start ~/web/artifact.tar.gz -f
