--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,24 +3,22 @@ orbs:
   slack: circleci/slack@4.1
 
 commands:
-  destroy_frontend:
-    description: Destroy front-end cloudformation stacks given a workflow ID.  
+ 
+  destroy-environment:
+    description: Destroy backend and frontend cloudformation stacks given a workflow ID.
+    parameters:
+      workflow_id:
+        type: string      
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
-         
+            echo "Destroying environment: << parameters.workflow_id >> "          
+            aws cloudformation delete-stack --stack-name udapeople-frontend-parameters.workflow_id
+            aws cloudformation delete-stack --stack-name udapeople-backend-parameters.workflow_id
 
-  destroy_backend:
-    description: Destroy back-end cloudformation stacks given a workflow ID.  
-    steps:
-      - run:
-          name: Destroy environments
-          when: on_fail
-          command: |
-            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -37,8 +35,7 @@ commands:
               cd ~/project/backend
               npm install
               npm run migrations > migrations_dump.txt
-              curl migrations_dump.txt  -d resave
-              npm run migrations > migrations_dump.txt
+            
             fi  
 
 jobs:
@@ -172,7 +169,8 @@ jobs:
               --tags project=backend \
               --stack-name  udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}  \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
-      - destroy_backend       
+      - destroy-environment:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"       
       - run:
           name: Ensure front-end infrastructure exist
           command: |
@@ -181,7 +179,8 @@ jobs:
               --tags project=frontend \
               --stack-name  udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
-      - destroy_frontend       
+      - destroy-environment:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"       
       - run:
           name: Add back-end ip to ansible inventory
           command: |
@@ -280,9 +279,10 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - revert-migrations
-      - destroy_frontend
       
+      - destroy-environment:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations
 
       # Here's where you will add some code to rollback on failure      
                
@@ -316,8 +316,10 @@ jobs:
             echo "Contents  of the inventory.txt file is -------$(tail -1 inventory.txt)"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - revert-migrations
-      - destroy_backend
+      
+      - destroy-environment:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations    
       
 
       # Here's where you will add some code to rollback on failure 
@@ -329,7 +331,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            # your code here
+            apk add --update curl
       - run:
           name: Get backend url
           command: |
@@ -390,3 +392,5 @@ workflows:
           requires: [run-migrations]   
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]      
+      - cloudfront-update:
+          requires: [smoke-test]    
