--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ commands:
             echo "Destroying environment: << parameters.workflow_id >> "          
             aws cloudformation delete-stack --stack-name udapeople-frontend-parameters.workflow_id
             aws cloudformation delete-stack --stack-name udapeople-backend-parameters.workflow_id
-
+            aws s3 rm dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
 
 
   revert-migrations:
@@ -27,7 +27,7 @@ commands:
     steps:
       - run:
           name: Revert migrations
-          when: fail
+          when: on_fail
           curl  --insecure https://kvdb.io/SbTo2xguyH4cBNU1xs4fYD/migration_${CIRCLE_WORKFLOW_ID:0:7}
           command: |
             if(( $Success==1 )); 
