--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ commands:
       - run:
           name: Revert migrations
           when: on_fail
-          curl  --insecure https://kvdb.io/SbTo2xguyH4cBNU1xs4fYD/migration_${CIRCLE_WORKFLOW_ID:0:7}
           command: |
+            Success=$(curl --insecure  https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_<< parameters.workflow_id >>)          
             if(( $Success==1 )); 
             then
               cd ~/project/backend
