--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,22 +21,25 @@ commands:
 
 
   revert-migrations:
-    description: Revert the last migration if successfully run in the current workflow.
-    Success :
-        type: string 
+    description: Revert the last migration
+    parameters:
+        workflow_id:
+            type: string      
     steps:
-      - run:
-          name: Revert migrations
-          when: on_fail
-          command: |
-            Success=$(curl --insecure  https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_<< parameters.workflow_id >>)          
-            if(( $Success==1 )); 
-            then
-              cd ~/project/backend
-              npm install
-              npm run migrations > migrations_dump.txt
-            
-            fi  
+        - run:
+            name: Revert migrations
+            when: on_fail
+            command: |
+                # Your Memstash or kvdb.io GET URL code goes here
+                # Example: kvdb.io
+                SUCCESS=$(curl --insecure  https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_<< parameters.workflow_id >>)
+                # Logic for reverting the database state
+                if (( $SUCCESS == 1 ));
+                then
+                    cd ~/project/backend
+                    npm install
+                    npm run migration:revert
+                fi  
 
 jobs:
   notify:
@@ -282,7 +285,8 @@ jobs:
       
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - revert-migrations
+      - revert-migrations:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
       # Here's where you will add some code to rollback on failure      
                
@@ -319,7 +323,8 @@ jobs:
       
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - revert-migrations    
+      - revert-migrations:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"    
       
 
       # Here's where you will add some code to rollback on failure 
