--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,8 +257,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum install -y tar gzip
-            apk add --update nodejs npm
+            sudo yum install -y tar gzip
+            sudo apk add --update nodejs npm
 
 
       - run:
@@ -270,14 +270,12 @@ jobs:
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-            cat frontend/.env
-
-      
+            cat frontend/.env  
       - run:
           name: Deploy frontend objects
           command: |
             cd frontend
-            yum install -y tar
+            sudo yum install -y tar
             npm install
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
