--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ commands:
             aws cloudformation delete-stack --stack-name "udapeople-frontend-<< parameters.workflow_id >>"
             
             aws cloudformation delete-stack --stack-name "udapeople-backend-<< parameters.workflow_id >>" 
-            aws s3 rm dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            aws s3 rm dist s3://udapeople-<< parameters.workflow_id >> --recursive
 
 
   revert-migrations:
@@ -257,7 +257,6 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y tar gzip
-            yum install nodejs npm
       - attach_workspace:
           at: ~/
 
