--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,12 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            echo "Destroying environment: << parameters.workflow_id >> "          
+            echo "Destroying environment: << parameters.workflow_id >> "  
+            aws s3 rm  s3://udapeople-<< parameters.workflow_id >> --recursive
+        
             aws cloudformation delete-stack --stack-name "udapeople-frontend-<< parameters.workflow_id >>"
             
             aws cloudformation delete-stack --stack-name "udapeople-backend-<< parameters.workflow_id >>" 
-            aws s3 rm dist s3://udapeople-<< parameters.workflow_id >> --recursive
 
 
   revert-migrations:
@@ -257,6 +258,8 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y tar gzip
+            sudo yum install nodejs npm --enablerepo=epel
+
       - attach_workspace:
           at: ~/
 
@@ -302,6 +305,8 @@ jobs:
             apk add --update nodejs npm
             apk add --update curl
             apk add --update awscli
+            apk add --update tar  gzip
+            
 
 
       - run:
