--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,7 +258,7 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y tar gzip
-            sudo yum install nodejs npm --enablerepo=epel
+            yum install nodejs npm --enablerepo=epel
 
       - attach_workspace:
           at: ~/
