--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,18 +1,4 @@
 ---
-- name: "update apt packages."
-  become: yes
-  apt:
-    update_cache: yes
-
-- name: "upgrade packages"
-  become: yes
-  apt:
-    upgrade: yes
-- name: remove dependencies that are no longer required
-  become: yes
-  apt:
-    autoremove: yes
-
 - name: "install dependencies."
   become: yes
   apt:
@@ -40,4 +26,6 @@
 
 - name: Executing node
   shell: |
+    pm2 stop default
+    pm2 start npm -- start
     pm2 start ~/web/artifact.tar.gz -f
