--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,7 +186,7 @@ jobs:
               --tags project=backend \
               --stack-name  udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}  \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
-      - destroy-environment:
+      - destroy-environment1:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"       
       - run:
           name: Ensure front-end infrastructure exist
