--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,8 +186,7 @@ jobs:
               --tags project=backend \
               --stack-name  udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}  \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
-      - destroy-environment1:
-          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"       
+          
       - run:
           name: Ensure front-end infrastructure exist
           command: |
@@ -212,6 +211,8 @@ jobs:
       # Here's where you will add some code to rollback on failure   
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - destroy-environment1:
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"      
 
   configure-infrastructure:
     docker:
@@ -319,6 +320,7 @@ jobs:
             apk add --update nodejs npm
             apk add --update curl
             apk add --update tar  gzip
+            apk add --update aws-cli
       - run:
           name: Deploy backend
           command: |
