--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -320,7 +320,11 @@ jobs:
             apk add --update nodejs npm
             apk add --update curl
             apk add --update tar  gzip
-            apk add --update aws-cli
+            apk add python curl
+            curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+            unzip awscli-bundle.zip
+            ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+
       - run:
           name: Deploy backend
           command: |
