--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -334,6 +334,7 @@ jobs:
             cd ..
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz  .
+            mkdir -p  ~/udacity/.circleci/ansible/roles/deploy/files
             mv artifact.tar.gz  .circleci/ansible/roles/deploy/files/artifact.tar.gz
             cd .circleci/ansible
             ansible-playbook -i inventory.txt deploy-backend.yml
