--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -335,12 +335,11 @@ jobs:
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz  .
             mkdir -p  ~/udacity/.circleci/ansible/roles/deploy/files
-            mv artifact.tar.gz  .circleci/ansible/roles/deploy/files/artifact.tar.gz
+            mv artifact.tar.gz  .circleci/ansible/roles/deploy/files
             cd .circleci/ansible
             ansible-playbook -i inventory.txt deploy-backend.yml
       
-      - destroy-environment1:
-          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+     
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"    
       
