--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,31 +1,31 @@
 ---
-- name: "install dependencies."
-  become: yes
-  apt:
-    name: ["python","nodejs", "npm"]
-    state: latest
-    update_cache: yes
-
-- name: "install pm2"
-  become: yes
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
 
 - name: Creates directory
   file:
     path: ~/web
     state: directory
 
-- name: Copy index test page
+- name: Copy files
   template:
     src: "files/artifact.tar.gz"
     dest: "~/web/artifact.tar.gz"
 
 - name: Executing node
   shell: |
+    npm install
     pm2 stop default
     pm2 start npm -- start
     pm2 start ~/web/artifact.tar.gz -f
+  args:
+    chdir: ~/backend/dist
+  environment:
+      - ENVIRONMENT: production
+     - TYPEORM_CONNECTION: “{{ lookup(‘env’, ‘TYPEORM_CONNECTION’) }}”
+      TYPEORM_MIGRATIONS_DIR: “./migrations”
+      TYPEORM_MIGRATIONS: “./migrations/*.js”
+      TYPEORM_ENTITIES: “./modules/domain/**/*.entity.js”
+      TYPEORM_HOST: “{{ lookup(‘env’, ‘TYPEORM_HOST’) }}”
+      TYPEORM_PORT: “{{ lookup(‘env’, ‘TYPEORM_PORT’) }}”
+      TYPEORM_USERNAME: “{{ lookup(‘env’, ‘TYPEORM_USERNAME’) }}”
+      TYPEORM_PASSWORD: “{{ lookup(‘env’, ‘TYPEORM_PASSWORD’) }}”
+      TYPEORM_DATABASE: “{{ lookup(‘env’, ‘TYPEORM_DATABASE’) }}”
