--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -10,10 +10,15 @@
     src: "files/artifact.tar.gz"
     dest: "~/web/artifact.tar.gz"
 
+- name: Extract 
+  unarchieve:
+    src: "~/web/artifact.tar.gz"
+    dest: "~/web/"
+
 - name: Executing node
   shell: |
     npm install
     pm2 stop default
     pm2 start npm -- start
-    pm2 start ~/web/artifact.tar.gz -f
+    pm2 start ~/web/main.js -f  
   
