--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -11,7 +11,7 @@
     dest: "~/web/artifact.tar.gz"
 
 - name: Extract 
-  unarchieve:
+  unarchive:
     src: "~/web/artifact.tar.gz"
     dest: "~/web/"
 
