--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -16,9 +16,9 @@
     dest: "~/web/"
 
 - name: Executing node
-  shell: |
+  command: |
     npm install
     pm2 stop default
     pm2 start npm -- start
-    pm2 start ~/web/main.js -f  
+    pm2 start ~/web/main.js 
   
