edit-deploy-role

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,16 +200,17 @@ jobs:
               --tags project=hossamudapeople \
               --stack-name  udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+
              
       - run:
           name: Addd back-end ip to ansible inventory
           command: |
             aws ec2 describe-instances \
-              --query "Reservations[*].Instances[*].PublicIpAddress" \
-              --filters "Name=tag:project,Values= hossamudapeople" \       
-              --output=text  >>  .circleci/ansible/inventory.txt
-              
-          
+              \
+                --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --filters "Name=tag:Project,Values=hossamudapeople" \
+                --output text >> inventory
+
       - persist_to_workspace:
           root: ~/
           paths:
@@ -288,9 +289,10 @@ jobs:
           name: Get backend url
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
-            --query "Reservations[*].Instances[*].PublicIpAddress" \
-            --filters "Name=tag:project,Values= hossamudapeople" \ 
-            --output=text)
+              \
+                --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --filters "Name=tag:Project,Values=hossamudapeople" \
+                --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
@@ -368,9 +370,10 @@ jobs:
           name: Get backend url
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters "Name=tag:project,Values= hossam-udapeople" \ 
-            --output text)
+              \
+                --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --filters "Name=tag:Project,Values=hossamudapeople" \
+                --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
       - run:
