edit-smoke-test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,9 +201,9 @@ jobs:
       - run:
           name: Addd back-end ip to ansible inventory
           command: |
-            export env=$(aws ec2 describe-instances \
-              \
+            export env=$(aws ec2 describe-instances \   
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}"\
                 --output text)
             echo "${env}" >>  .circleci/ansible/inventory.txt
             cat  .circleci/ansible/inventory.txt
@@ -285,9 +285,9 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-              \
+            export BACKEND_IP=$(aws ec2 describe-instances \   
                 --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}"\
                 --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
