edit-smoke-test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -353,13 +353,18 @@ jobs:
       # Here's where you will add some code to rollback on failure 
   smoke-test:
     docker:
-      - image: alpine:latest
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-            apk add --update curl           
+            apk add --update curl 
+            apk add --update   gzip
+            apk add python curl
+            curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+            unzip awscli-bundle.zip
+            ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws          
 
       - attach_workspace:
           at: ~/      
@@ -390,7 +395,7 @@ jobs:
             if curl -s ${URL} | grep "Welcome"
             then
                 # Change this to 0 after the job fails
-              return 0
+              return 1
             else
               return 1
             fi
