--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -440,21 +440,12 @@ jobs:
       - run:
           name: Get old stack workflow id
           command: |
-            # Fetch the Old workflow ID
-            export OldWorkflowID=$(aws cloudformation \
-                    list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                    --no-paginate --output text | cut -d '-' -f2- )
             echo OldWorkflowID: "${OldWorkflowID}"
-            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-            # Fetch the stack names
-            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                    --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-            echo Stack names: "${STACKS[@]}"
       - run:
           name: Remove old stacks and files
           command: |
             export OldWorkflowID=$(aws cloudformation \
-                    list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                    list-exports --query "Exports[?Name==\`oldWorkflowID\`].Value" \
                     --no-paginate --output text | cut -d '-' -f2- )
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
@@ -465,7 +456,13 @@ jobs:
               aws s3 rb "s3://udapeople-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-            fi        
+            fi   
+Outputs:
+  WorkflowID:
+    Value: !Sub ${CIRCLE_WORKFLOW_ID:0:7}
+    Description: old work flow id
+    Export:
+      Name: OldWorkflowID                 
           
 workflows:
   default:
